--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8443
-server.ssl.key-store=classpath:key/keystore.p12
-server.ssl.key-store-password=qwerty
+server.ssl.key-store=classpath:key/keystroe.p12
+server.ssl.key-store-password=engine
 server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias:tomcat
+#server.ssl.keyAlias:
 http.port=8080
