--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+mybatis.type-aliases-package=com.example.demo.webRtc.entity
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/meeting?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = root
 server.port=8443
 server.ssl.key-store=classpath:key/keystroe.p12
 server.ssl.key-store-password=engine
