--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 mybatis.type-aliases-package=com.example.demo.webRtc.entity
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/meeting?useSSL=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/meeting?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 server.port=8443
@@ -9,6 +9,3 @@ server.ssl.key-store-password=engine
 server.ssl.keyStoreType=PKCS12
 #server.ssl.keyAlias:
 http.port=8080
-
-spring.mvc.view.prefix=/WEB-INF/page/
-spring.mvc.view.suffix=.jsp
