--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ server.ssl.keyStoreType=PKCS12
 http.port=8080
 
 spring.mvc.view.prefix=/WEB-INF/page/
-spring.mvc.view.suffix=.jsp
+spring.mvc.view.suffix=.html
