--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,16 @@
 		    <artifactId>netty-codec-http</artifactId>
 		    <version>4.1.5.Final</version>
 		</dependency>
+				<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpmime</artifactId>
+		    <version>4.5.3</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
